Added Eureka Server and updated all microservices for service registration and integration

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -60,6 +60,12 @@
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 
+		<!-- Eureka Client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 		<!-- WebFlux (includes WebClient) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
